Minor spacing fix in profile cards

--- a/components/ProfileCard/_profilecard.scss
+++ b/components/ProfileCard/_profilecard.scss
@@ -7,13 +7,15 @@
 	margin: 0 auto;
 
 	&__title {
+		text-align: center;
+		min-height: 60px;
 		@extend .heading;
 		@extend .mobile-heading-5;
 		margin: 16px 0 0;
 		@media (min-width: 724px) {
 			font-weight: 700;
 			font-size: 2rem;
-			line-height: 3.6rem;
+			line-height: 3rem;
 		}
 	}
 
